--- a/src/views/pages/sponsortree.html
+++ b/src/views/pages/sponsortree.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commissions</title>
+    <title>Sponsor tree</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -61,17 +61,17 @@
                         <div class="hidden mt-3" id="loggedinMenu">
                             <ul class="space-y-1">
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./profile.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Profile Setting
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./order.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Orders
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./changepassword.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Change Password
                                     </a>
                                 </li>
@@ -240,17 +240,17 @@
 
                             <ul id="referralsMenu" class=" mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./sponsortree.html" class="block p-2 text-sm rounded-md bg-custom-teal">
                                         Sponsor Tree
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./unileveltree.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Unilevel Tree
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./myreferralcommisions.html" class="block p-2 text-sm rounded-md bg-custom-teal">
+                                    <a href="./myreferralcommisions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Referrals Commissions
                                     </a>
                                 </li>
@@ -291,185 +291,107 @@
                 </button>
                 
                 <img src="../../../assets/images/logo.png" alt="Logo" class="ml-4 h-10 w-auto">
-
             </header>
 
-            <main class="flex-1 p-6 main-content">
-
-            <header class="mb-6">
-
-                <h2 class="text-2xl font-semibold text-gray-800">My Sponsor Tree</h2>
-
-                <p class="text-sm text-gray-500">Home - My Sponsor Tree</p>
-
-            </header>
-
-
-
-            <div class="tree-container text-white p-5 rounded-lg font-mono text-sm">
-
-                <ul>
-
-                    <li>
-
-                        <i class="fas fa-chevron-down mr-2"></i>
-
-                        <span>admin Kongsi Niaga ( admin ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                        <ul class="ml-6 mt-1 space-y-1">
-
-                            <li>
-
-                                <i class="fas fa-chevron-down mr-2"></i>
-
-                                <span>kongsiniaga1 ( kongsiniaga1 ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                                <ul class="ml-6 mt-1 space-y-1">
-
-                                     <li>
-
-                                        <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                        <span>Rohaizad Raof ( rizad0 ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                                    </li>
-
-                                </ul>
-
-                            </li>
-
-                            <li>
-
-                                <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                <span>Rohaizad Abdul Raof ( rizad02 ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                             <li>
-
-                                <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                <span>Alfyan Saputra ( alfyan20 ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                             <li>
-
-                                <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                <span>Hazem Shannak ( hazem1 ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <span>Muhammad Suffian Hilmen Bin Rohaizad ( sbhq ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <span>Sofiah Serena ( serena90 ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <span>Rosli Udin ( rosli ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <span>Rosli Udin ( botcha )</span>
-
-                            </li>
-
-                             <li>
-
-                                <span>Jana Jana ( janna ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                <span>Norliza fajudin ( datoliza ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                <span>Roslan Hj Awang Din ( tokian ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                             <li>
-
-                                <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                <span>Joeberry Gani ( joeberry ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                             <li>
-
-                                <i class="fas fa-chevron-right mr-2 text-gray-400"></i>
-
-                                <span>Hairul Azman masdar ( habim ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <span>Admin1 HQ ( admin1 ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <span>admin2 HQ ( admin ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                             <li>
-
-                                <span>Amir1 HQ ( amirr ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                            <li>
-
-                                <span>kongsiniaga HQ ( kongsiniaga ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                             <li>
-
-                                <span>Kongsi2 HQ ( kongsi ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                             <li>
-
-                                <span>adminkongsi HQ ( adminkongsi ) - </span><span class="text-yellow-400">SEED YOGU VENTURE</span>
-
-                            </li>
-
-                        </ul>
-
-                    </li>
-
-                </ul>
-
-            </div>
-
-        </main>
-
+            <main class="p-6">
+                <div class="mb-8">
+                    <h1 class="text-3xl font-bold text-gray-800">My Sponsor Tree</h1>
+                    <p class="text-sm text-gray-500 mt-1">Home - My Sponsor Tree</p>
+                </div>
+
+                <div class="bg-custom-teal-dark tree-container text-white p-5 rounded-lg font-mono text-sm overflow-x-auto">
+                    <ul>
+                        <li>
+                            <i class="fas fa-chevron-down cursor-pointer toggle-icon"></i>
+                            <span>admin Kongsi Niaga ( admin ) - </span><span>SEED YOGU VENTURE</span>
+                            <ul class="sub-tree">
+                                <li>
+                                    <i class="fas fa-chevron-down cursor-pointer toggle-icon"></i>
+                                    <span>kongsiniaga1 ( kongsiniaga1 ) - </span><span>SEED YOGU VENTURE</span>
+                                    <ul class="sub-tree">
+                                        <li>
+                                            <i class="fas fa-chevron-right text-gray-400"></i>
+                                            <span>Rohaizad Raof ( rizad0 ) - </span><span>SEED YOGU VENTURE</span>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Rohaizad Abdul Raof ( rizad02 ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Alfyan Saputra ( alfyan20 ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Hazem Shannak ( hazem1 ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Muhammad Suffian Hilmen Bin Rohaizad ( sbhq ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Sofiah Serena ( serena90 ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                 <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Rosli Udin ( rosli ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Rosli Udin ( botcha )</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Jana Jana ( janna ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Norliza fajudin ( datoliza ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Roslan Hj Awang Din ( tokian ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Joeberry Gani ( joeberry ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Hairul Azman masdar ( habim ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Admin1 HQ ( admin1 ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>admin2 HQ ( admin ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Amir1 HQ ( amirr ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>kongsiniaga HQ ( kongsiniaga ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                 <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>Kongsi2 HQ ( kongsi ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                                 <li>
+                                    <i class="fas fa-chevron-right text-gray-400"></i>
+                                    <span>adminkongsi HQ ( adminkongsi ) - </span><span>SEED YOGU VENTURE</span>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </main>
     </div>
 <script>
 document.addEventListener('DOMContentLoaded', function () {
