--- a/src/views/pages/changepassword.html
+++ b/src/views/pages/changepassword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rewards</title>
+    <title>Chsnge Password</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -58,7 +58,7 @@
                             <h6 class="font-semibold text-white">ADMIN GANTENG</h6>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
                         </a>
-                        <div class="hidden mt-3" id="loggedinMenu">
+                        <div class=" mt-3" id="loggedinMenu">
                             <ul class="space-y-1">
                                 <li>
                                     <a href="./profile.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
@@ -71,7 +71,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./changepassword.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./changepassword.html" class="block p-2 text-sm rounded-md bg-custom-teal">
                                         Change Password
                                     </a>
                                 </li>
@@ -173,7 +173,7 @@
                         </li>
 
                         <li>
-                            <a href="./rewards.html" class="flex items-center gap-3 p-2 rounded-md bg-custom-teal">
+                            <a href="./rewards.html" class="flex items-center gap-3 p-2 rounded-md hover:bg-custom-teal">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                     <path fill-rule="evenodd" d="M5 5a3 3 0 015.14-2.502A3.001 3.001 0 0115 5v2a2 2 0 011 1.732V15a2 2 0 01-2 2H6a2 2 0 01-2-2V8.732A2 2 0 015 7V5zm5-2.45a1 1 0 00-1.414.07L8.293 3.586A3 3 0 016 5V7h8V5a3 3 0 01-2.293-1.014L11.414 2.62a1 1 0 00-1.414-.07zM6 9a1 1 0 011-1h6a1 1 0 011 1v5a1 1 0 01-1 1H7a1 1 0 01-1-1V9z" clip-rule="evenodd" />
                                 </svg>
@@ -291,50 +291,44 @@
                 </button>
                 
                 <img src="../../../assets/images/logo.png" alt="Logo" class="ml-4 h-10 w-auto">
-
             </header>
-
-        <main class="p-6 lg:p-8">
-                <div class="mb-8">
-                    <h1 class="text-3xl font-bold text-gray-800">Rewards</h1>
-                    <p class="text-sm text-gray-500 mt-1">Home - Rewards</p>
+            <main class="p-6">
+                <div class="mb-6">
+                    <h1 class="md:text-3xl text-2xl font-bold text-gray-800">Change Password</h1>
+                    <p class="text-sm text-gray-500">Home - Change Password</p>
                 </div>
-
-                <div class="flex items-center gap-2 mb-6">
-                    <button class="px-4 py-1.5 text-sm font-semibold text-white bg-custom-teal-dark rounded-full">All</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Herbs</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Beuty & Health</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Food & Baverage</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Business</button>
-                </div>
-
-                <!-- <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
-                    <div class="bg-white rounded-xl overflow-hidden shadow-lg flex flex-col transition-all duration-300 ease-in-out hover:scale-105 hover:shadow-xl">
-                        <div class="p-5 flex-grow">
-                            <img src="../../../assets/images/produk2.jpg" alt="Moringano Product" class="w-80 rounded-md h-80 object-cover mb-4">
-                            <h3 class="text-xl font-semibold text-custom-teal-dark">Moringano</h3>
-                        </div>
-                        <div class="px-5 pb-5 mt-auto">
-                            <div class="flex items-center justify-between">
-                                <p class="text-lg font-bold text-custom-teal">RM49.90</p>
-                                <a href="#" class="px-4 py-2 text-sm font-medium text-white bg-custom-teal rounded-xl hover:bg-custom-teal-dark transition-colors">Details</a>
+                <div class="bg-white p-8 rounded-lg shadow-md max-w mx-auto">
+                    <form>
+                        <div class="space-y-6">
+                            <div>
+                                <label for="current-password" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Current Password
+                                    <span class="text-red-500">*</span>
+                                </label>
+                                <input type="password" id="current-password" placeholder="Enter Current Password" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" required>
+                            </div>
+                            <div>
+                                <label for="password" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Password
+                                    <span class="text-red-500">*</span>
+                                </label>
+                                <input type="password" id="password" placeholder="Enter Password" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" required>
+                            </div>
+                            <div>
+                                <label for="confirm-password" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Confirm Password
+                                    <span class="text-red-500">*</span>
+                                </label>
+                                <input type="password" id="confirm-password" placeholder="Enter Confirm Password" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" required>
                             </div>
                         </div>
-                    </div>
-                    <div class="bg-white rounded-xl overflow-hidden shadow-lg flex flex-col transition-all duration-300 ease-in-out hover:scale-105 hover:shadow-xl">
-                        <div class="p-5 flex-grow">
-                            <img src="../../../assets/images/produk1.jpg" alt="Moringano Product" class="w-80 rounded-md h-80 object-cover mb-4">
-                            <h3 class="text-xl font-semibold text-custom-teal-dark">Face Mist</h3>
+                        <div class="mt-8 pt-6 border-t border-gray-200">
+                            <button type="submit" class="w-full bg-custom-teal-dark text-white font-bold py-3 px-4 rounded-md hover:bg-custom-tealfocus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-custom-teal">
+                                Submit
+                            </button>
                         </div>
-                        <div class="px-5 pb-5 mt-auto">
-                            <div class="flex items-center justify-between">
-                                <p class="text-lg font-bold text-custom-teal">RM39.90</p>
-                                <a href="#" class="px-4 py-2 text-sm font-medium text-white bg-custom-teal rounded-xl hover:bg-custom-teal-dark transition-colors">Details</a>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
+                    </form>
+                </div>
             </main>
     </div>
 <script>
