--- a/src/views/pages/activateuser.html
+++ b/src/views/pages/activateuser.html
@@ -76,12 +76,12 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./supportticket.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Support Ticket
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./2fa.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         2FA Security
                                     </a>
                                 </li>
