--- a/src/views/pages/sponsortree.html
+++ b/src/views/pages/sponsortree.html
@@ -76,7 +76,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./supportticket.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Support Ticket
                                     </a>
                                 </li>
