--- a/src/views/pages/plan.html
+++ b/src/views/pages/plan.html
@@ -41,6 +41,7 @@
                     <div>
                         <a href="#">
                             <img class="h-10" src="../../../assets/images/logo.png" alt="Kongsi Niaga Logo">
+                            
                         </a>
                     </div>
 
@@ -124,10 +125,13 @@
     </header>
 
     <main>
-        <section class="relative h-40 md:h-56  bg-cover bg-center text-white" 
+        <section class="relative h-40 md:h-56 bg-cover bg-center text-white flex items-center justify-center" 
             style="background-image: url('../../../assets/images/background.jpg');">
-            
             <div class="absolute inset-0 bg-[#063A4A]/70"></div>
+            <div class="relative z-10 text-center text-xs md:text-lg max-w-2xl px-4">
+                <p>Flexible subscriptions to help your business grow.
+With Kongsi Niaga, you can choose the plan that best suits the size and needs of your business – whether you're just starting out or ready to grow further.</p>
+            </div>
         </section>
         <section class="py-16 sm:py-20 md:py-24">
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
