--- a/src/views/pages/levelcommissions.html
+++ b/src/views/pages/levelcommissions.html
@@ -17,7 +17,7 @@
                     colors: {
                         'custom-teal-dark': '#063a49',
                         'custom-teal': '#1a4e69',
-                        'custom-pink': '#ac1eb9',
+                        'custom-pink': '#0866f',
                         'custom-blue-light': '#6bbaec' // Warna dari contoh sidebar kedua
                     }
                 }
@@ -47,7 +47,7 @@
 </head>
 <body class="font-sans">
 
-    <div class="flex min-h-screen">
+    <div class="min-h-screen">
 
         <aside id="sidebar" class="fixed top-0 left-0 z-40 h-screen w-64 bg-custom-teal-dark text-white flex flex-col transition-transform duration-300 ease-in-out">
         
