--- a/src/views/pages/rewards.html
+++ b/src/views/pages/rewards.html
@@ -17,7 +17,7 @@
                     colors: {
                         'custom-teal-dark': '#063a49',
                         'custom-teal': '#1a4e69',
-                        'custom-pink': '#ac1eb9',
+                        'custom-pink': '#0866f',
                         'custom-blue-light': '#6bbaec' // Warna dari contoh sidebar kedua
                     }
                 }
@@ -47,7 +47,7 @@
 </head>
 <body class="font-sans">
 
-    <div class="flex min-h-screen">
+    <div class=" min-h-screen">
 
         <aside id="sidebar" class="fixed top-0 left-0 z-40 h-screen w-64 bg-custom-teal-dark text-white flex flex-col transition-transform duration-300 ease-in-out">
         
@@ -322,13 +322,24 @@
                     <p class="text-sm text-gray-500 mt-1">Home - Rewards</p>
                 </div>
 
-                <div class="flex items-center gap-2 mb-6">
-                    <button class="px-4 py-1.5 text-sm font-semibold text-white bg-custom-teal-dark rounded-full">All</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Herbs</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Beuty & Health</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Food & Baverage</button>
-                    <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">Business</button>
+                <div class="overflow-x-auto whitespace-nowrap flex gap-2 mb-6">
+                <button class="px-4 py-1.5 text-sm font-semibold text-white bg-custom-teal-dark rounded-full">
+                    All
+                </button>
+                <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">
+                    Herbs
+                </button>
+                <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">
+                    Beauty & Health
+                </button>
+                <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">
+                    Food & Beverage
+                </button>
+                <button class="px-4 py-1.5 text-sm font-semibold text-gray-600 bg-gray-200 hover:bg-gray-300 rounded-full">
+                    Business
+                </button>
                 </div>
+
 
                 <!-- <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                     <div class="bg-white rounded-xl overflow-hidden shadow-lg flex flex-col transition-all duration-300 ease-in-out hover:scale-105 hover:shadow-xl">
