--- a/src/views/pages/walletconversion.html
+++ b/src/views/pages/walletconversion.html
@@ -17,7 +17,7 @@
                     colors: {
                         'custom-teal-dark': '#063a49',
                         'custom-teal': '#1a4e69',
-                        'custom-pink': '#ac1eb9',
+                        'custom-pink': '#0866f',
                         'custom-blue-light': '#6bbaec' // Warna dari contoh sidebar kedua
                     }
                 }
