--- a/src/views/pages/ewallet.html
+++ b/src/views/pages/ewallet.html
@@ -77,7 +77,7 @@
                 <div class="p-4">
                     <div>
                         <a href="#loggedinMenu" data-menu-toggle class="flex items-center justify-between w-full">
-                            <h6 class="font-semibold text-white">ADMIN GANTENG</h6>
+                            <h6 class="font-semibold text-white">Rohaizad Raoof</h6>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
                         </a>
                         <div class="hidden mt-3" id="loggedinMenu">
